--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: NewRock Wireless | Premium Electronics
+title: NewRock Wireless | Shop Smartphones,Tablets,Smart watches online
 url: "https://50stateswireless-jpg.github.io"
 baseurl: "/NewrockWireless-2"
 
