--- a/_data/products.yml
+++ b/_data/products.yml
@@ -252,3 +252,26 @@ builds on its predecessor with a few notable improvements, including enhanced co
     5G connectivity: It supports 5G cellular for improved network performance in areas with coverage.
     Advanced health features: New health features arriving with watchOS 26 include hypertension notifications an"
   image: "images/Apple-Watch-Ultra-3-49mm.jpg"
+
+  id: 20      #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
+  name: "Maxwest Vice 4G Flip Phone , Unlocked , New , Sealed"
+  category: "Phone"
+  price: 119.95
+  description: " Black, Blue, silver
+
+    Design: Flip-style phone with a durable plastic body.
+    Displays:
+        Main Display: 2.8-inch TFT screen.
+        External Display: 1.8-inch screen for viewing notifications, incoming calls, and messages without opening the phone.
+    Camera: 2MP rear camera with flash.
+    Memory: 64MB RAM and 128MB internal memory, expandable via a microSD card.
+    Connectivity:
+        Network: 4G LTE and VoLTE technology for clear calls.
+        Wireless: Bluetooth.
+        Ports: USB-C for charging.
+    Special features:
+        SOS button: A dedicated button for emergencies.
+        Dual SIM: Supports two nano-SIM cards.
+        Other features: FM radio.
+    Compatibility: Works with GSM networks like T-Mobile and AT&T but is not compatible with the Verizon network.                                                               "
+  image: "URL OR PATH TO PRODUCT IMAGE HERE"
