--- a/_data/products.yml
+++ b/_data/products.yml
@@ -274,4 +274,4 @@ builds on its predecessor with a few notable improvements, including enhanced co
         Dual SIM: Supports two nano-SIM cards.
         Other features: FM radio.
     Compatibility: Works with GSM networks like T-Mobile and AT&T but is not compatible with the Verizon network.                                                               "
-  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+  image: "images/maxwest_vice_black__53943.jpg"
