--- a/_data/products.yml
+++ b/_data/products.yml
@@ -275,3 +275,19 @@ builds on its predecessor with a few notable improvements, including enhanced co
         Other features: FM radio.
     Compatibility: Works with GSM networks like T-Mobile and AT&T but is not compatible with the Verizon network.                                                               "
   image: "images/maxwest_vice_black__53943.jpg"
+
+  id: 21       #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
+  name: " Maxwest Ranger , 4G ,32GB , Unlocked , New , Sealed"
+  category: "Phone"
+  price: 119.95
+  description: " Black. This feature phone is built for durability and includes a number of basic communication  features. 
+
+    Design and display: It features a 2.4-inch color display and a physical keypad.
+    Durability: The phone is rugged, with a build that is resistant to water, dust, and shocks. It is designed for outdoor use or demanding job site conditions.
+    Connectivity: This is a 4G LTE-enabled unlocked phone compatible with GSM carriers like T-Mobile and AT&T.
+    Storage: The phone has only 128MB of internal storage, but can hold a microSD card of up to 32GB to store files.
+    Special features: A standout feature is its 4000mAh battery that can be used as a power bank to charge other devices. It also includes a flashlight                                                                "
+#  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+
+
+  
