--- a/_data/products.yml
+++ b/_data/products.yml
@@ -287,7 +287,7 @@ builds on its predecessor with a few notable improvements, including enhanced co
     Connectivity: This is a 4G LTE-enabled unlocked phone compatible with GSM carriers like T-Mobile and AT&T.
     Storage: The phone has only 128MB of internal storage, but can hold a microSD card of up to 32GB to store files.
     Special features: A standout feature is its 4000mAh battery that can be used as a power bank to charge other devices. It also includes a flashlight                                                                "
-#  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+  image: "images/maxwest_ranger_black__72703.jpg"
 
 
   
