--- a/_data/products.yml
+++ b/_data/products.yml
@@ -303,6 +303,6 @@ builds on its predecessor with a few notable improvements, including enhanced co
  Unlocked
  Overseas
  Here works with H2O and Ultra                   "
-  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+  image: "Maxwest NEO M1 Candy Bar Phone"
 
   
