--- a/_data/products.yml
+++ b/_data/products.yml
@@ -290,7 +290,7 @@ builds on its predecessor with a few notable improvements, including enhanced co
   image: "images/maxwest_ranger_black__72703.jpg"
 
 - id: 22       #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
-  name: "PRODUCT NAME HERE"
+  name: "Maxwest NEO M1 Candy Bar Phone ,Unlocked ,New , Sealed "
   category: "Phoned"
   price: 109.95
   description: " Blue, Black and Gray Candy bar smartphone
@@ -303,6 +303,6 @@ builds on its predecessor with a few notable improvements, including enhanced co
  Unlocked
  Overseas
  Here works with H2O and Ultra                   "
-  image: "Maxwest NEO M1 Candy Bar Phone"
+  image: "images/maxwest-NEO-M1-Mobile-aPhone-User-Manual_1-185x300.jpg"
 
   
