--- a/_data/products.yml
+++ b/_data/products.yml
@@ -316,4 +316,4 @@ builds on its predecessor with a few notable improvements, including enhanced co
  SIM: Available with either a single or dual SIM card slot.
  Storage: Includes a microSD card slot for expandable storage (often up to 8GB).
  Multimedia: Features a basic VGA camera, Bluetooth connectivity, and GPRS/WAP support"
- image: "URL OR PATH TO PRODUCT IMAGE HERE"
+ image: "UNO-CLAM-3G-BLU-GAL.JPG"
