--- a/_data/products.yml
+++ b/_data/products.yml
@@ -290,7 +290,7 @@ builds on its predecessor with a few notable improvements, including enhanced co
 
 - id: 22       #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
   name: "Maxwest NEO M1 Candy Bar Phone ,Unlocked ,New , Sealed"
-  category: "Phoned"
+  category: "Phone"
   price: 109.95
   description: "Blue, Black and Gray Candy bar smartphone
  3x flash
