--- a/_data/products.yml
+++ b/_data/products.yml
@@ -316,3 +316,27 @@ builds on its predecessor with a few notable improvements, including enhanced co
   Storage: Includes a microSD card slot for expandable storage (often up to 8GB).
   Multimedia: Features a basic VGA camera, Bluetooth connectivity, and GPRS/WAP support"
   image: "images/71mNOZ4dT5L-_AC_SL1500___30335.jpg"
+
+
+- id: 24      #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
+  name: "Orbic Myra , 5G , 64GB ,Unlocked , New , Sealed"
+  category: "Phone"
+  price: 199.95
+  description: "Black. 5G smartphone: Features a larger 6.78” screen and fast speeds.
+Triple rear camera: Includes a 48MP main camera, 8MP, and 2MP cameras.
+16MP front camera: Ideal for selfies and video calls.
+All-day battery: 5000mAh with Quick Charge 3.0 for extended use and fast charging.
+Durable design: Metallic finish and scratch-resistant 2D glass screen.
+
+Specifications:
+
+Display: 6.78” HD+ TFT LCD, 20:9 aspect ratio, scratch-resistant glass.
+Network: 4G and 5G support.
+Battery: 5000mAh, non-removable, Quick Charge 3.0.
+Connectivity: Wi-Fi (2.4GHz and 5GHz), Bluetooth 5.0.
+Camera:
+Main: 48MP + 8MP + 2MP with flash.
+Front: 16MP.
+Speed & Power: Qualcomm Snapdragon® 750G.
+Memory: 6GB RAM, 64GB internal storage, Micro SD support up to 512GB.                                                                   "
+  image: "URL OR PATH TO PRODUCT IMAGE HERE"
