--- a/_data/products.yml
+++ b/_data/products.yml
@@ -338,5 +338,5 @@ Camera:
 Main: 48MP + 8MP + 2MP with flash.
 Front: 16MP.
 Speed & Power: Qualcomm Snapdragon® 750G.
-Memory: 6GB RAM, 64GB internal storage, Micro SD support up to 512GB.                                                                   "
-  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+Memory: 6GB RAM, 64GB internal storage, Micro SD support up to 512GB."
+  image: "images/orbic_myra_5g__43224.jpg"
