--- a/_data/products.yml
+++ b/_data/products.yml
@@ -365,3 +365,46 @@ Memory: 6GB RAM, 64GB internal storage, Micro SD support up to 512GB."
   image: "images/Tab10_new_2520x.webp"
 
 
+- id: 26       #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
+  name: "Logic Z1L Flip Phone , 4G , Dual Sim , Unlocked , New , Sealed "
+  category: "Phone"
+  price: 139.95
+  description: "Gray or White.  
+The Z1L Flip is a sporty looking LTE foldable phone that offers users 4G communication.
+
+VoLTE Suppor , BANDS
+
+4G: 2/4/5/8/12/13/17/28AB/66
+3G: 2/4/5
+2G: 850/900/1800/1900 MHz , SCREEN
+
+Size: 2.4” & 1.77” TFT
+240×320 & 128×160
+4:3 Aspect ratio , CONNECTIONS
+
+USB Type-C
+3.5mm Audio Jack
+SIM Card: Dual Nano SIM (4FF) , MEMORY
+
+ROM: 256MB
+RAM: 48MB>
+Micro SD: Up to: , CONNECTIVITY
+
+BT: 5.0 , BATTERY
+
+Capacity: 1,000mAh
+Li-ion , CAMERA
+
+VGA + Flash , MULTIMEDIA
+
+Music and Video Player
+FM Radio . EXTRAS
+
+Video Recorder
+Loudspeaker
+Browser , PROCESSOR
+
+Chipset: T107
+UNISOC "
+  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+
