--- a/_data/products.yml
+++ b/_data/products.yml
@@ -406,5 +406,5 @@ Browser , PROCESSOR
 
 Chipset: T107
 UNISOC "
-  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+  image: "images/LOGIC-Z1L-Flip_8060_1.png"
 
