--- a/_data/products.yml
+++ b/_data/products.yml
@@ -420,5 +420,5 @@ Connectivity: Supports Wi-Fi and 4G connectivity, making it suitable for both ho
 Battery: 4000mAh battery.
 Cameras: 5MP rear camera and a 2MP front camera.
 Accessories: Often bundled with a protective silicone case and screen protector"
-  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+  image: "images/sky_elite_oxtax_tab_wtihout_case__97220.jpg"
 
