--- a/_data/products.yml
+++ b/_data/products.yml
@@ -434,5 +434,5 @@ Accessories: Often bundled with a protective silicone case and screen protector"
   Rear camera is 8MP
   Front Camera is 2MP
   5100 mAh Battery                                            
-  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+  image: "images/  "
  
