--- a/_data/products.yml
+++ b/_data/products.yml
@@ -362,7 +362,7 @@ Memory: 6GB RAM, 64GB internal storage, Micro SD support up to 512GB."
     Reviews of the Orbic TAB10R 5G UW (and the related Orbic Speed 5G hotspot) suggest a mixed user experience:
         Positive: Some users praise the fast 5G speeds, portability, and ease of setup. It’s seen as a reliable solution for those who need constant high-speed internet on the go.
         Negative: Other users report issues with battery life, random shutdowns, and connectivity problems, particularly in areas with competing Wi-Fi 6 devices. There have also been complaints about faulty batteries and difficulty obtaining replacements"
-  image: "images/Tab10_new_2520x.webp"
+  image: "images/Tab10_new_2520x.jpg"
 
 
 - id: 26       #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
@@ -434,5 +434,5 @@ Accessories: Often bundled with a protective silicone case and screen protector"
   Rear camera is 8MP
   Front Camera is 2MP
   5100 mAh Battery                                            
-  image: "images/Samsung Galaxy Tab A9 (Sm-x115) 8.7inch 64GB Cellular, New, Sealed"
+  image: "images/Samsung Galaxy Tab A9 (Sm-x115) 8.7inch 64GB Cellular, New, Sealed.jpg"
  
