--- a/_data/products.yml
+++ b/_data/products.yml
@@ -362,7 +362,7 @@ Memory: 6GB RAM, 64GB internal storage, Micro SD support up to 512GB."
     Reviews of the Orbic TAB10R 5G UW (and the related Orbic Speed 5G hotspot) suggest a mixed user experience:
         Positive: Some users praise the fast 5G speeds, portability, and ease of setup. It’s seen as a reliable solution for those who need constant high-speed internet on the go.
         Negative: Other users report issues with battery life, random shutdowns, and connectivity problems, particularly in areas with competing Wi-Fi 6 devices. There have also been complaints about faulty batteries and difficulty obtaining replacements"
-  image: "images/Tab10_new_2520x.jpg"
+  image: "images/Tab10_new_2520x.webp"
 
 
 - id: 26       #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
