--- a/_data/products.yml
+++ b/_data/products.yml
@@ -450,4 +450,4 @@ The Samsung Galaxy Tab A9 (Sm-x115) 8.7inch 64GB , WiFi, New, Sealed, like our o
   Operation Distance: >10m
   Charging: USB Type-C connector
   Net Weight: 35g, Gross Weight: 50g"
-  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+  image: "images/moto_buds_085__69255.jpg"
