--- a/_data/products.yml
+++ b/_data/products.yml
@@ -451,3 +451,69 @@ The Samsung Galaxy Tab A9 (Sm-x115) 8.7inch 64GB , WiFi, New, Sealed, like our o
   Charging: USB Type-C connector
   Net Weight: 35g, Gross Weight: 50g"
   image: "images/moto_buds_085__69255.jpg"
+
+- id: 5       #ID MUMBER HERE-CHANGE TO AVOID DUPLICATION
+  name: "soundcore P25i , By Anker Earbuds , New , Sealed"
+  category: "Headsets & Earbuds"
+  price: 89.95
+  description: "Black or White.Anker soundcore P25i Earbuds
+
+ Key Specifications:
+
+ Wireless Connectivity:
+
+ Bluetooth True Wireless:Yes
+
+ Headphone Fit: In-Ear
+
+ Battery Life: 30 hours
+
+ General Product Name: Anker P25i True Wireless In-Ear Headphones
+ Brand: Soundcore
+ Model Number: A3949Z11
+ Color: Black
+
+ Sound Isolating: Yes
+
+ Wireless Connectivity: Bluetooth
+ True Wireless: Yes
+ Bluetooth Version: 5.3
+
+ Design:
+ Anker soundcore P25i Earbuds
+
+ Key Specifications:
+
+ Wireless Connectivity:
+
+ Bluetooth True Wireless:Yes
+
+ Headphone Fit: In-Ear
+
+ Battery Life: 30 hours
+
+ General Product Name: Anker P25i True Wireless In-Ear Headphones
+ Brand: Soundcore
+ Model Number: A3949Z11
+ Color: Black
+
+Sound Isolating: Yes
+
+Wireless Connectivity: Bluetooth
+True Wireless: Yes
+Bluetooth Version: 5.3
+
+Design:
+
+Headphone Fit: In-Ear
+
+Rechargeable: Yes
+Battery Life: 30 hours
+Battery Life Provided by Charging Case: 20 hours
+Fast Charging: Yes
+
+Rechargeable: Yes
+Battery Life: 30 hours
+Battery Life Provided by Charging Case: 20 hours
+Fast Charging: Yes "
+  image: "URL OR PATH TO PRODUCT IMAGE HERE"
