--- a/_data/products.yml
+++ b/_data/products.yml
@@ -516,4 +516,4 @@ Rechargeable: Yes
 Battery Life: 30 hours
 Battery Life Provided by Charging Case: 20 hours
 Fast Charging: Yes "
-  image: "URL OR PATH TO PRODUCT IMAGE HERE"
+  image: "images/Anker-Soundcore-P25i-Earbuds-1.jpg"
